--- a/src/pages/buyer.html
+++ b/src/pages/buyer.html
@@ -279,5 +279,42 @@
       </div>
     </section>
 
+    <section class="section list-stores">
+      <div class="section-xxl">
+        <div class="list-stores__wrapper">
+          <div class="container">
+            <div class="list-stores__content">
+              <h1 class="heading-primary list-stores__heading">Список магазинов, в&nbsp;которых доступна покупка <span class="blue">только по тарифу VIP</span></h1>
+              <p class="list-stores__text main-text">Чтобы покупать в этих магазинах байеры вынуждены прибегать к разным хитростям,&nbsp;из-за которых Простобокс несет дополнительные расходы. Поэтому бесплатного выкупа с промокодом из таких магазинов быть не может.</p>
+              <ul class="list-stores__list">
+                <li class="list-stores__item">New Balance</li>
+                <li class="list-stores__item">New Balance Outlet</li>
+                <li class="list-stores__item">Adidas</li>
+                <li class="list-stores__item">Levi's</li>
+                <li class="list-stores__item">Ralph Lauren</li>
+                <li class="list-stores__item">Coach</li>
+                <li class="list-stores__item">Bestbuy</li>
+                <li class="list-stores__item">Tiffany</li>
+                <li class="list-stores__item">Coach outlete</li>
+              </ul>
+            </div>
+          </div>
+      </div>
+      <div class="container">
+        <div class="sending-link list-stores__sending">
+          <p class="sending-link__heading heading-secondary">
+            Отправить ссылку на товар байерам Простобокса:
+          </p>
+          <div class="sending-link__from-wrapper">
+            <form class="sending-link__form" action="">
+              <input class="sending-link__input" type="text" placeholder="Ссылка на товар">
+              <button class="sending-link__button" type="submit"></button>
+            </form>
+            <p class="sending-link__text">Нажимая на кнопку вы подтверждаете согласие с правилами предоставления услуги и политикой конфиденциальности</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
 {% endblock %}
