--- a/src/pages/buyer.html
+++ b/src/pages/buyer.html
@@ -65,52 +65,51 @@
       </div>
     </section>
 
-    <section class="help-buyer">
-      <div class="container">
-        <h1 class="heading-primary help-buyer__heading">Когда может понадобиться помощь штатного <span class="blue">байера</span>:</h1>
-        <ul class="help-buyer__list">
-          <li class="help-buyer__item help-buyer__item--by-yourself">
-            <p class="help-buyer__text">
-              Если вы
-            </p>
-            <p class="help-buyer__text-bold">
-              не хотите самостоятельно покупать
-            </p>
-            <p class="help-buyer__text">
-              в американских магазинах
-            </p>
-          </li>
-          <li class="help-buyer__item help-buyer__item--impossible">
-            <p class="help-buyer__text">
-              Если вы хотите заказать товар из&nbsp;магазина, где
-            </p>
-            <p class="help-buyer__text-bold">
-              невозможно купить не имея американской кредитки
-            </p>
-          </li>
-          <li class="help-buyer__item help-buyer__item--delivery">
-            <p class="help-buyer__text">
-              Если американский магазин
-            </p>
-            <p class="help-buyer__text-bold">
-              не доставляет товары на адреса посредников
-            </p>
-          </li>
-        </ul>
+    <section class="help-buyer section">
+      <div class="help-buyer__reason">
+        <div class="container">
+          <h1 class="heading-primary help-buyer__heading">Когда может понадобиться помощь штатного <span class="blue">байера</span>:</h1>
+          <ul class="help-buyer__list">
+            <li class="help-buyer__item help-buyer__item--by-yourself">
+              <p class="help-buyer__text">
+                Если вы
+              </p>
+              <p class="help-buyer__text-bold">
+                не хотите самостоятельно покупать
+              </p>
+              <p class="help-buyer__text">
+                в американских магазинах
+              </p>
+            </li>
+            <li class="help-buyer__item help-buyer__item--impossible">
+              <p class="help-buyer__text">
+                Если вы хотите заказать товар из&nbsp;магазина, где
+              </p>
+              <p class="help-buyer__text-bold">
+                невозможно купить не имея американской кредитки
+              </p>
+            </li>
+            <li class="help-buyer__item help-buyer__item--delivery">
+              <p class="help-buyer__text">
+                Если американский магазин
+              </p>
+              <p class="help-buyer__text-bold">
+                не доставляет товары на адреса посредников
+              </p>
+            </li>
+          </ul>
+        </div>
       </div>
-    </section>
 
-    <section class="purchase-help section">
-
-      <div class="section-xxl purchase-help__section">
-        <div class="purchase-help__wrapper">
+      <div class="section-xxl help-buyer__section">
+        <div class="help-buyer__purchase-wrapper">
           <div class="container">
-            <div class="purchase-help__content-wrapper">
-              <div class="purchase-help__content">
-                <h1 class="heading-secondary purchase-help__heading">
+            <div class="help-buyer__content-wrapper">
+              <div class="help-buyer__content">
+                <h1 class="heading-secondary help-buyer__purchase-heading">
                   Наши байеры <span class="blue">помогут</span> вам с&nbsp;<span class="blue">покупками в США</span>.
                 </h1>
-                <p class="purchase-help__text">
+                <p class="help-buyer__purchase-text text-content">
                   У них есть и карты, и специальные дополнительные адреса, для того, чтобы покупать товары даже в тех магазинах, которые не доставляют на адреса посредников, например Ralph Lauren, Levi's, Coach.
                 </p>
               </div>
@@ -120,7 +119,7 @@
       </div>
 
       <div class="container">
-        <div class="sending-link purchase-help__sending">
+        <div class="sending-link help-buyer__sending">
           <p class="sending-link__heading heading-secondary">
             Отправить ссылку на товар байерам Простобокса:
           </p>
@@ -142,26 +141,26 @@
           <li class="how-issue__item how-issue__item--choice">
             <div class="how-issue__item-wrapper--choice">
               <p class="heading-tertiary how-issue__tertiary">Выбираете товар</p>
-              <p class="how-issue__text">в американском магазине и присылаете ссылку&nbsp;на него байерам Простобокса.</p>
-              <p class="how-issue__text">Кроме ссылки важно указать название товара, размер и другую информацию, чтобы у байера не было вопросов во время оформления заказа в магазине.</p>
+              <p class="how-issue__text text-content">в американском магазине и присылаете ссылку&nbsp;на него байерам Простобокса.</p>
+              <p class="how-issue__text text-content">Кроме ссылки важно указать название товара, размер и другую информацию, чтобы у байера не было вопросов во время оформления заказа в магазине.</p>
             </div>
           </li>
           <li class="how-issue__item how-issue__item--redemption">
             <div class="how-issue__item-wrapper--redemption">
               <p class="heading-tertiary how-issue__tertiary">Байер принимает заказ и&nbsp;выкупает товары</p>
-              <p class="how-issue__text">Пользуясь американской кредиткой и при необходимости дополнительными американскими адресами, если магазин не доставляет на адреса посредников.</p>
+              <p class="how-issue__text text-content">Пользуясь американской кредиткой и при необходимости дополнительными американскими адресами, если магазин не доставляет на адреса посредников.</p>
             </div>
           </li>
           <li class="how-issue__item how-issue__item--shipment">
             <div class="how-issue__item-wrapper--shipment">
               <p class="heading-tertiary how-issue__tertiary">Отправляют заказ</p>
-              <p class="how-issue__text">Через несколько дней после оформления и он поступает на склад Простобокса</p>
+              <p class="how-issue__text text-content">Через несколько дней после оформления и он поступает на склад Простобокса</p>
             </div>
           </li>
           <li class="how-issue__item how-issue__item--pay">
             <div class="how-issue__item-wrapper--pay">
               <p class="heading-tertiary how-issue__tertiary">Вы оплачиваете доставку и&nbsp;посылка летит к вам</p>
-              <p class="how-issue__text">Байер может заполнить за вас декларацию, а если посылка превышает порог таможенной пошлины – оплатить пошлину можно вместе с оплатой доставки Простобоксом.</p>
+              <p class="how-issue__text text-content">Байер может заполнить за вас декларацию, а если посылка превышает порог таможенной пошлины – оплатить пошлину можно вместе с оплатой доставки Простобоксом.</p>
             </div>
           </li>
         </ul>
@@ -189,38 +188,38 @@
             <h1 class="heading-primary advantage-bayres__heading">Почему мы <span class="blue">рекомендуем</span> покупать через <span class="blue">байеров</span> Простобокса?</h1>
             <ul class="advantage-bayres__list">
               <li class="advantage-bayres__item advantage-bayres__item--course">
-                <p class="advantage-bayres__text">Байеры Простобокса прошли специальный курс обучения и разбираются
+                <p class="advantage-bayres__text text-content">Байеры Простобокса <b>прошли специальный курс</b> обучения и разбираются
                   в&nbsp;американском шопинге лучше любого стороннего байера.</p>
               </li>
               <li class="advantage-bayres__item advantage-bayres__item--quality">
-                <p class="advantage-bayres__text">Простобокс отвечает за качество работы байера и&nbsp;берем возможные его ошибки на себя.</p>
+                <p class="advantage-bayres__text text-content text-content">Простобокс отвечает за качество работы байера и&nbsp;<b>берем</b> возможные его <b>ошибки на себя</b>.</p>
               </li>
               <li class="advantage-bayres__item advantage-bayres__item--account">
-                <p class="advantage-bayres__text">Во избежании ошибок и&nbsp;накладок работа с&nbsp;байером ведется только через личный кабинет Простобокса.</p>
+                <p class="advantage-bayres__text text-content">Во избежании ошибок и&nbsp;накладок работа с&nbsp;байером ведется <b>только через личный кабинет</b> Простобокса.</p>
               </li>
               <li class="advantage-bayres__item advantage-bayres__item--watch">
-                <p class="advantage-bayres__text">Байеров несколько и они выкупают заказы 24/7, это важно на распродажах.</p>
+                <p class="advantage-bayres__text text-content">Байеров несколько и они <b>выкупают заказы 24/7</b>, это важно на распродажах.</p>
               </li>
               <li class="advantage-bayres__item advantage-bayres__item--language">
-                <p class="advantage-bayres__text">Байеры владеют английским языком и могут переписываться и&nbsp;созваниваться с&nbsp;магазинами.</p>
+                <p class="advantage-bayres__text text-content">Байеры <b>владеют английским языком</b> и могут переписываться и&nbsp;созваниваться с&nbsp;магазинами.</p>
               </li>
               <li class="advantage-bayres__item advantage-bayres__item--terminal">
-                <p class="advantage-bayres__text">Байеры выкупают товары, используя американские кредитные карты.</p>
+                <p class="advantage-bayres__text text-content">Байеры выкупают товары, используя <b>американские кредитные карты</b>.</p>
               </li>
               <li class="advantage-bayres__item advantage-bayres__item--compass">
-                <p class="advantage-bayres__text">В распоряжении байеров несколько дополнительных американских адресов для заказа из капризных магазинов.</p>
+                <p class="advantage-bayres__text text-content">В распоряжении байеров <b>несколько дополнительных американских адресов</b> для заказа из капризных магазинов.</p>
               </li>
               <li class="advantage-bayres__item advantage-bayres__item--percent">
-                <p class="advantage-bayres__text">Байеры знают о скидках в&nbsp;магазинах и применяют их&nbsp;к заказам.</p>
+                <p class="advantage-bayres__text text-content">Байеры знают о <b>скидках в&nbsp;магазинах</b> и применяют их&nbsp;к заказам.</p>
               </li>
               <li class="advantage-bayres__item advantage-bayres__item--ebay">
-                <p class="advantage-bayres__text">Байеры умеют покупать на&nbsp;аукционах eBay.</p>
+                <p class="advantage-bayres__text text-content">Байеры умеют покупать <b>на&nbsp;аукционах eBay</b>.</p>
               </li>
               <li class="advantage-bayres__item advantage-bayres__item--box">
-                <p class="advantage-bayres__text">Байеры проверяют ваши товары, когда они уже на&nbsp;складе. Чтобы вы получили то, что хотели!</p>
+                <p class="advantage-bayres__text text-content">Байеры <b>проверяют ваши товары</b>, когда они уже на&nbsp;складе. Чтобы вы получили то, что хотели!</p>
               </li>
               <li class="advantage-bayres__item advantage-bayres__item--sheet">
-                <p class="advantage-bayres__text">Байеры могут заполнить за&nbsp;вас декларацию. Услуга&nbsp;платная и стоит $5.</p>
+                <p class="advantage-bayres__text text-content">Байеры <b>могут заполнить за&nbsp;вас декларацию</b>. Услуга&nbsp;платная и стоит <b><span class="blue">$5</span></b>.</p>
               </li>
             </ul>
           </div>
@@ -285,7 +284,7 @@
           <div class="container">
             <div class="list-stores__content">
               <h1 class="heading-primary list-stores__heading">Список магазинов, в&nbsp;которых доступна покупка <span class="blue">только по тарифу VIP</span></h1>
-              <p class="list-stores__text main-text">Чтобы покупать в этих магазинах байеры вынуждены прибегать к разным хитростям,&nbsp;из-за которых Простобокс несет дополнительные расходы. Поэтому бесплатного выкупа с промокодом из таких магазинов быть не может.</p>
+              <p class="list-stores__text text-content">Чтобы покупать в этих магазинах байеры вынуждены прибегать к разным хитростям,&nbsp;из&nbsp;за которых Простобокс несет дополнительные расходы. Поэтому бесплатного выкупа с промокодом из таких магазинов быть не может.</p>
               <ul class="list-stores__list">
                 <li class="list-stores__item">New Balance</li>
                 <li class="list-stores__item">New Balance Outlet</li>
