--- a/src/pages/buyer.html
+++ b/src/pages/buyer.html
@@ -315,5 +315,15 @@
       </div>
     </section>
 
+    <section class="disclaimer section">
+      <div class="container">
+        <div class="col-lg-6 ms-lg-auto">
+          <div class="disclaimer__content">
+            <h2 class="heading-secondary disclaimer__heading">Дисклеймер:</h2>
+            <p class="text-content disclaimer__text">Стоимость услуг байера <b><span class="blue">10%</span></b> от стоимости заказа, но <b>не менее 10 долларов США</b>. Стоимость услуг <b>для капризных магазинов –<span class="blue">15%</span></b> от стоимости заказа, <b>но не менее 15 долларов США</b>.</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 {% endblock %}
