--- a/src/pages/buyer.html
+++ b/src/pages/buyer.html
@@ -7,30 +7,6 @@
 {% block main %}
 
   <main>
-    <!--<section class="product-order section">
-      <div class="section-xxl">
-        <div class="product-order__wrapper">
-          <div class="container">
-            <div class="product-order__content-wrapper">
-              <ul class="breadcrumbs product-order__breadcrumbs">
-                <li class="breadcrumbs__item">
-                  <a href="#">Главная</a>
-                </li>
-                <li class="breadcrumbs__item breadcrumbs__item--active">
-                  Профессиональные БАЙЕРЫ от Простобокса
-                </li>
-              </ul>
-              <h2 class="heading-primary product-order__heading">
-                Профессиональные <span class="blue">байеры</span> от Простобокса
-              </h2>
-              <p class="product-order__text">
-                Просто отправьте ссылку на интересующий товар, наши штатные байеры&nbsp;все купят и отправят на наш склад в Делавэре.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>-->
-
     <section class="banner-inner banner-inner--buyer section mb-4 mb-lg-5">
       <div class="section-xxl">
         <div class="banner-inner__wrapper">
@@ -138,26 +114,26 @@
       <div class="container how-issue__container">
         <h1 class="heading-primary how-issue__heading">Как оформить заказ через <span class="blue">байера</span>&nbsp;Простобокса?</h1>
         <ul>
-          <li class="how-issue__item how-issue__item--choice">
+          <li class="how-issue__item how-issue__item--choice how-issue__item--left">
             <div class="how-issue__item-wrapper--choice">
               <p class="heading-tertiary how-issue__tertiary">Выбираете товар</p>
               <p class="how-issue__text text-content">в американском магазине и присылаете ссылку&nbsp;на него байерам Простобокса.</p>
               <p class="how-issue__text text-content">Кроме ссылки важно указать название товара, размер и другую информацию, чтобы у байера не было вопросов во время оформления заказа в магазине.</p>
             </div>
           </li>
-          <li class="how-issue__item how-issue__item--redemption">
+          <li class="how-issue__item how-issue__item--redemption how-issue__item--right">
             <div class="how-issue__item-wrapper--redemption">
               <p class="heading-tertiary how-issue__tertiary">Байер принимает заказ и&nbsp;выкупает товары</p>
               <p class="how-issue__text text-content">Пользуясь американской кредиткой и при необходимости дополнительными американскими адресами, если магазин не доставляет на адреса посредников.</p>
             </div>
           </li>
-          <li class="how-issue__item how-issue__item--shipment">
+          <li class="how-issue__item how-issue__item--shipment how-issue__item--left">
             <div class="how-issue__item-wrapper--shipment">
               <p class="heading-tertiary how-issue__tertiary">Отправляют заказ</p>
               <p class="how-issue__text text-content">Через несколько дней после оформления и он поступает на склад Простобокса</p>
             </div>
           </li>
-          <li class="how-issue__item how-issue__item--pay">
+          <li class="how-issue__item how-issue__item--pay how-issue__item--right">
             <div class="how-issue__item-wrapper--pay">
               <p class="heading-tertiary how-issue__tertiary">Вы оплачиваете доставку и&nbsp;посылка летит к вам</p>
               <p class="how-issue__text text-content">Байер может заполнить за вас декларацию, а если посылка превышает порог таможенной пошлины – оплатить пошлину можно вместе с оплатой доставки Простобоксом.</p>
