--- a/src/pages/buyer.html
+++ b/src/pages/buyer.html
@@ -32,8 +32,8 @@
           </p>
           <div class="sending-link__from-wrapper">
             <form class="sending-link__form" action="">
-              <input class="sending-link__input form__input" type="text" placeholder="Ссылка на товар">
-              <button class="button button__button-arrow" type="submit"></button>
+              <input class="sending-link__input form__input form__input--white" type="text" placeholder="Ссылка на товар">
+              <button class="button button--arrow sending-link__button" type="submit"></button>
             </form>
             <p class="sending-link__text">Нажимая на кнопку вы подтверждаете согласие с правилами предоставления услуги и политикой конфиденциальности</p>
           </div>
@@ -101,8 +101,8 @@
           </p>
           <div class="sending-link__from-wrapper">
             <form class="sending-link__form" action="">
-              <input class="sending-link__input form__input" type="text" placeholder="Ссылка на товар">
-              <button class="button button__button-arrow" type="submit"></button>
+              <input class="sending-link__input form__input form__input--white" type="text" placeholder="Ссылка на товар">
+              <button class="button button--arrow sending-link__button" type="submit"></button>
             </form>
             <p class="sending-link__text">Нажимая на кнопку вы подтверждаете согласие с правилами предоставления услуги и политикой конфиденциальности</p>
           </div>
@@ -148,8 +148,8 @@
           </p>
           <div class="sending-link__from-wrapper">
             <form class="sending-link__form" action="">
-              <input class="sending-link__input form__input" type="text" placeholder="Ссылка на товар">
-              <button class="button button__button-arrow" type="submit"></button>
+              <input class="sending-link__input form__input form__input--white" type="text" placeholder="Ссылка на товар">
+              <button class="button button--arrow sending-link__button" type="submit"></button>
             </form>
             <p class="sending-link__text">Нажимая на кнопку вы подтверждаете согласие с правилами предоставления услуги и политикой конфиденциальности</p>
           </div>
@@ -208,8 +208,8 @@
           </p>
           <div class="sending-link__from-wrapper">
             <form class="sending-link__form" action="">
-              <input class="sending-link__input form__input" type="text" placeholder="Ссылка на товар">
-              <button class="button button__button-arrow" type="submit"></button>
+              <input class="sending-link__input form__input form__input--white" type="text" placeholder="Ссылка на товар">
+              <button class="button button--arrow sending-link__button" type="submit"></button>
             </form>
             <p class="sending-link__text">Нажимая на кнопку вы подтверждаете согласие с правилами предоставления услуги и политикой конфиденциальности</p>
           </div>
@@ -245,8 +245,8 @@
           </p>
           <div class="sending-link__from-wrapper">
             <form class="sending-link__form" action="">
-              <input class="sending-link__input form__input" type="text" placeholder="Ссылка на товар">
-              <button class="button button__button-arrow" type="submit"></button>
+              <input class="sending-link__input form__input form__input--white" type="text" placeholder="Ссылка на товар">
+              <button class="button button--arrow sending-link__button" type="submit"></button>
             </form>
             <p class="sending-link__text">Нажимая на кнопку вы подтверждаете согласие с правилами предоставления услуги и политикой конфиденциальности</p>
           </div>
@@ -282,8 +282,8 @@
           </p>
           <div class="sending-link__from-wrapper">
             <form class="sending-link__form" action="">
-              <input class="sending-link__input form__input" type="text" placeholder="Ссылка на товар">
-              <button class="button button__button-arrow" type="submit"></button>
+              <input class="sending-link__input form__input form__input--white" type="text" placeholder="Ссылка на товар">
+              <button class="button button--arrow sending-link__button" type="submit"></button>
             </form>
             <p class="sending-link__text">Нажимая на кнопку вы подтверждаете согласие с правилами предоставления услуги и политикой конфиденциальности</p>
           </div>
