--- a/src/pages/buyer.html
+++ b/src/pages/buyer.html
@@ -164,20 +164,20 @@
             <h1 class="heading-primary advantage-bayres__heading">Почему мы <span class="blue">рекомендуем</span> покупать через <span class="blue">байеров</span> Простобокса?</h1>
             <ul class="advantage-bayres__list">
               <li class="advantage-bayres__item advantage-bayres__item--course">
-                <p class="advantage-bayres__text text-content">Байеры Простобокса <b>прошли специальный курс</b> обучения и разбираются
+                <p class="advantage-bayres__text text-content">Байеры Простобокса <b>прошли&nbsp;специальный курс</b> обучения и разбираются
                   в&nbsp;американском шопинге лучше любого стороннего байера.</p>
               </li>
               <li class="advantage-bayres__item advantage-bayres__item--quality">
                 <p class="advantage-bayres__text text-content text-content">Простобокс отвечает за качество работы байера и&nbsp;<b>берем</b> возможные его <b>ошибки на себя</b>.</p>
               </li>
               <li class="advantage-bayres__item advantage-bayres__item--account">
-                <p class="advantage-bayres__text text-content">Во избежании ошибок и&nbsp;накладок работа с&nbsp;байером ведется <b>только через личный кабинет</b> Простобокса.</p>
+                <p class="advantage-bayres__text text-content">Во избежании ошибок и&nbsp;накладок работа с&nbsp;байером&nbsp;ведется <b>только через личный кабинет</b> Простобокса.</p>
               </li>
               <li class="advantage-bayres__item advantage-bayres__item--watch">
                 <p class="advantage-bayres__text text-content">Байеров несколько и они <b>выкупают заказы 24/7</b>, это важно на распродажах.</p>
               </li>
               <li class="advantage-bayres__item advantage-bayres__item--language">
-                <p class="advantage-bayres__text text-content">Байеры <b>владеют английским языком</b> и могут переписываться и&nbsp;созваниваться с&nbsp;магазинами.</p>
+                <p class="advantage-bayres__text text-content">Байеры <b>владеют английским&nbsp;языком</b> и могут переписываться и&nbsp;созваниваться с&nbsp;магазинами.</p>
               </li>
               <li class="advantage-bayres__item advantage-bayres__item--terminal">
                 <p class="advantage-bayres__text text-content">Байеры выкупают товары, используя <b>американские кредитные карты</b>.</p>
@@ -192,7 +192,7 @@
                 <p class="advantage-bayres__text text-content">Байеры умеют покупать <b>на&nbsp;аукционах eBay</b>.</p>
               </li>
               <li class="advantage-bayres__item advantage-bayres__item--box">
-                <p class="advantage-bayres__text text-content">Байеры <b>проверяют ваши товары</b>, когда они уже на&nbsp;складе. Чтобы вы получили то, что хотели!</p>
+                <p class="advantage-bayres__text text-content">Байеры <b>проверяют ваши товары</b>, когда они уже на&nbsp;складе. Чтобы вы получили&nbsp;то, что хотели!</p>
               </li>
               <li class="advantage-bayres__item advantage-bayres__item--sheet">
                 <p class="advantage-bayres__text text-content">Байеры <b>могут заполнить за&nbsp;вас декларацию</b>. Услуга&nbsp;платная и стоит <b><span class="blue">$5</span></b>.</p>
