--- a/src/pages/buyer.html
+++ b/src/pages/buyer.html
@@ -2,7 +2,6 @@
 
 {% set siteName = "Prostobox.com" %}
 {% set isAuthenticated = false %}
-{% set isIndex = true %}
 
 {% block main %}
 
@@ -44,7 +43,7 @@
     <section class="help-buyer section">
       <div class="help-buyer__reason">
         <div class="container">
-          <h1 class="heading-primary help-buyer__heading">Когда может понадобиться помощь штатного <span class="blue">байера</span>:</h1>
+          <h2 class="heading-primary help-buyer__heading">Когда может понадобиться помощь штатного <span class="blue">байера</span>:</h2>
           <ul class="help-buyer__list">
             <li class="help-buyer__item help-buyer__item--by-yourself">
               <p class="help-buyer__text">
@@ -82,9 +81,9 @@
           <div class="container">
             <div class="help-buyer__content-wrapper">
               <div class="help-buyer__content">
-                <h1 class="heading-secondary help-buyer__purchase-heading">
+                <h3 class="heading-secondary help-buyer__purchase-heading">
                   Наши байеры <span class="blue">помогут</span> вам с&nbsp;<span class="blue">покупками в США</span>.
-                </h1>
+                </h3>
                 <p class="help-buyer__purchase-text text-content">
                   У них есть и карты, и специальные дополнительные адреса, для того, чтобы покупать товары даже в тех магазинах, которые не доставляют на адреса посредников, например Ralph Lauren, Levi's, Coach.
                 </p>
@@ -112,7 +111,7 @@
 
     <section class="how-issue section">
       <div class="container how-issue__container">
-        <h1 class="heading-primary how-issue__heading">Как оформить заказ через <span class="blue">байера</span>&nbsp;Простобокса?</h1>
+        <h2 class="heading-primary how-issue__heading">Как оформить заказ через <span class="blue">байера</span>&nbsp;Простобокса?</h2>
         <ul>
           <li class="how-issue__item how-issue__item--choice how-issue__item--left">
             <div class="how-issue__item-wrapper--choice">
@@ -157,52 +156,52 @@
       </div>
     </section>
 
-    <section class="advantage-bayres section">
+    <section class="advantage-buyers section">
       <div class="section-xxl">
-        <div class="advantage-bayres__wrapper">
+        <div class="advantage-buyers__wrapper">
           <div class="container">
-            <h1 class="heading-primary advantage-bayres__heading">Почему мы <span class="blue">рекомендуем</span> покупать через <span class="blue">байеров</span> Простобокса?</h1>
-            <ul class="advantage-bayres__list">
-              <li class="advantage-bayres__item advantage-bayres__item--course">
-                <p class="advantage-bayres__text text-content">Байеры Простобокса <b>прошли&nbsp;специальный курс</b> обучения и разбираются
+            <h2 class="heading-primary advantage-buyers__heading">Почему мы <span class="blue">рекомендуем</span> покупать через <span class="blue">байеров</span> Простобокса?</h2>
+            <ul class="advantage-buyers__list">
+              <li class="advantage-buyers__item advantage-buyers__item--course">
+                <p class="advantage-buyers__text text-content">Байеры Простобокса <b>прошли&nbsp;специальный курс</b> обучения и разбираются
                   в&nbsp;американском шопинге лучше любого стороннего байера.</p>
               </li>
-              <li class="advantage-bayres__item advantage-bayres__item--quality">
-                <p class="advantage-bayres__text text-content text-content">Простобокс отвечает за качество работы байера и&nbsp;<b>берем</b> возможные его <b>ошибки на себя</b>.</p>
+              <li class="advantage-buyers__item advantage-buyers__item--quality">
+                <p class="advantage-buyers__text text-content text-content">Простобокс отвечает за качество работы байера и&nbsp;<b>берем</b> возможные его <b>ошибки на себя</b>.</p>
               </li>
-              <li class="advantage-bayres__item advantage-bayres__item--account">
-                <p class="advantage-bayres__text text-content">Во избежании ошибок и&nbsp;накладок работа с&nbsp;байером&nbsp;ведется <b>только через личный кабинет</b> Простобокса.</p>
+              <li class="advantage-buyers__item advantage-buyers__item--account">
+                <p class="advantage-buyers__text text-content">Во избежании ошибок и&nbsp;накладок работа с&nbsp;байером&nbsp;ведется <b>только через личный кабинет</b> Простобокса.</p>
               </li>
-              <li class="advantage-bayres__item advantage-bayres__item--watch">
-                <p class="advantage-bayres__text text-content">Байеров несколько и они <b>выкупают заказы 24/7</b>, это важно на распродажах.</p>
+              <li class="advantage-buyers__item advantage-buyers__item--watch">
+                <p class="advantage-buyers__text text-content">Байеров несколько и они <b>выкупают заказы 24/7</b>, это важно на распродажах.</p>
               </li>
-              <li class="advantage-bayres__item advantage-bayres__item--language">
-                <p class="advantage-bayres__text text-content">Байеры <b>владеют английским&nbsp;языком</b> и могут переписываться и&nbsp;созваниваться с&nbsp;магазинами.</p>
+              <li class="advantage-buyers__item advantage-buyers__item--language">
+                <p class="advantage-buyers__text text-content">Байеры <b>владеют английским&nbsp;языком</b> и могут переписываться и&nbsp;созваниваться с&nbsp;магазинами.</p>
               </li>
-              <li class="advantage-bayres__item advantage-bayres__item--terminal">
-                <p class="advantage-bayres__text text-content">Байеры выкупают товары, используя <b>американские кредитные карты</b>.</p>
+              <li class="advantage-buyers__item advantage-buyers__item--terminal">
+                <p class="advantage-buyers__text text-content">Байеры выкупают товары, используя <b>американские кредитные карты</b>.</p>
               </li>
-              <li class="advantage-bayres__item advantage-bayres__item--compass">
-                <p class="advantage-bayres__text text-content">В распоряжении байеров <b>несколько дополнительных американских адресов</b> для заказа из капризных магазинов.</p>
+              <li class="advantage-buyers__item advantage-buyers__item--compass">
+                <p class="advantage-buyers__text text-content">В распоряжении байеров <b>несколько дополнительных американских адресов</b> для заказа из капризных магазинов.</p>
               </li>
-              <li class="advantage-bayres__item advantage-bayres__item--percent">
-                <p class="advantage-bayres__text text-content">Байеры знают о <b>скидках в&nbsp;магазинах</b> и применяют их&nbsp;к заказам.</p>
+              <li class="advantage-buyers__item advantage-buyers__item--percent">
+                <p class="advantage-buyers__text text-content">Байеры знают о <b>скидках в&nbsp;магазинах</b> и применяют их&nbsp;к заказам.</p>
               </li>
-              <li class="advantage-bayres__item advantage-bayres__item--ebay">
-                <p class="advantage-bayres__text text-content">Байеры умеют покупать <b>на&nbsp;аукционах eBay</b>.</p>
+              <li class="advantage-buyers__item advantage-buyers__item--ebay">
+                <p class="advantage-buyers__text text-content">Байеры умеют покупать <b>на&nbsp;аукционах eBay</b>.</p>
               </li>
-              <li class="advantage-bayres__item advantage-bayres__item--box">
-                <p class="advantage-bayres__text text-content">Байеры <b>проверяют ваши товары</b>, когда они уже на&nbsp;складе. Чтобы вы получили&nbsp;то, что хотели!</p>
+              <li class="advantage-buyers__item advantage-buyers__item--box">
+                <p class="advantage-buyers__text text-content">Байеры <b>проверяют ваши товары</b>, когда они уже на&nbsp;складе. Чтобы вы получили&nbsp;то, что хотели!</p>
               </li>
-              <li class="advantage-bayres__item advantage-bayres__item--sheet">
-                <p class="advantage-bayres__text text-content">Байеры <b>могут заполнить за&nbsp;вас декларацию</b>. Услуга&nbsp;платная и стоит <b><span class="blue">$5</span></b>.</p>
+              <li class="advantage-buyers__item advantage-buyers__item--sheet">
+                <p class="advantage-buyers__text text-content">Байеры <b>могут заполнить за&nbsp;вас декларацию</b>. Услуга&nbsp;платная и стоит <b><span class="blue">$5</span></b>.</p>
               </li>
             </ul>
           </div>
         </div>
       </div>
       <div class="container">
-        <div class="sending-link advantage-bayres__sending">
+        <div class="sending-link advantage-buyers__sending">
           <p class="sending-link__heading heading-secondary">
             Отправить ссылку на товар байерам Простобокса:
           </p>
@@ -217,24 +216,24 @@
       </div>
     </section>
 
-    <section class="cost-bayres section">
-      <div class="container cost-bayres__container">
-        <h1 class="heading-primary cost-bayres__heading">Сколько стоят услуги <span class="blue">байеров</span> Простобокса?</h1>
+    <section class="cost-buyers section">
+      <div class="container cost-buyers__container">
+        <h2 class="heading-primary cost-buyers__heading">Сколько стоят услуги <span class="blue">байеров</span> Простобокса?</h2>
         <ul>
-          <li class="cost-bayres__item cost-bayres__item--firecracker">
-            <p class="heading-tertiary cost-bayres__tertiary">Бесплатно с&nbsp;промокодом</p>
-            <p class="blue cost-bayres__text-percent">$0</p>
-            <p class="cost-bayres__text">Ищите промокод на бесплатный выкуп&nbsp;в&nbsp;наших&nbsp;соцсетях. Новые магазины&nbsp;появляются постоянно!</p>
+          <li class="cost-buyers__item cost-buyers__item--firecracker">
+            <p class="heading-tertiary cost-buyers__tertiary">Бесплатно с&nbsp;промокодом</p>
+            <p class="blue cost-buyers__text-percent">$0</p>
+            <p class="cost-buyers__text">Ищите промокод на бесплатный выкуп&nbsp;в&nbsp;наших&nbsp;соцсетях. Новые магазины&nbsp;появляются постоянно!</p>
           </li>
-          <li class="cost-bayres__item cost-bayres__item--rocket">
-            <p class="heading-tertiary cost-bayres__tertiary">Тариф стандарт</p>
-            <p class="blue cost-bayres__text-percent">10% от стоимости заказа но&nbsp;не&nbsp;менее $10</p>
-            <p class="cost-bayres__text">Для большинства магазинов, исключая магазины&nbsp;из&nbsp;черного списка, если у вас нет актуального промо-кода</p>
+          <li class="cost-buyers__item cost-buyers__item--rocket">
+            <p class="heading-tertiary cost-buyers__tertiary">Тариф стандарт</p>
+            <p class="blue cost-buyers__text-percent">10% от стоимости заказа но&nbsp;не&nbsp;менее $10</p>
+            <p class="cost-buyers__text">Для большинства магазинов, исключая магазины&nbsp;из&nbsp;черного списка, если у вас нет актуального промо-кода</p>
           </li>
-          <li class="cost-bayres__item cost-bayres__item--crown">
-            <p class="heading-tertiary cost-bayres__tertiary cost-bayres__tertiary--vip">Тариф VIP</p>
-            <p class="blue cost-bayres__text-percent">15% от стоимости заказа но&nbsp;не&nbsp;менее $15</p>
-            <p class="cost-bayres__text">Для магазинов со сложной системой выкупа, которые обычно не доставляют на адреса посредников. Промокоды не действуют.</p>
+          <li class="cost-buyers__item cost-buyers__item--crown">
+            <p class="heading-tertiary cost-buyers__tertiary cost-buyers__tertiary--vip">Тариф VIP</p>
+            <p class="blue cost-buyers__text-percent">15% от стоимости заказа но&nbsp;не&nbsp;менее $15</p>
+            <p class="cost-buyers__text">Для магазинов со сложной системой выкупа, которые обычно не доставляют на адреса посредников. Промокоды не действуют.</p>
           </li>
         </ul>
       </div>
@@ -259,7 +258,7 @@
         <div class="list-stores__wrapper">
           <div class="container">
             <div class="list-stores__content">
-              <h1 class="heading-primary list-stores__heading">Список магазинов, в&nbsp;которых доступна покупка <span class="blue">только по тарифу VIP</span></h1>
+              <h2 class="heading-primary list-stores__heading">Список магазинов, в&nbsp;которых доступна покупка <span class="blue">только по тарифу VIP</span></h2>
               <p class="list-stores__text text-content">Чтобы покупать в этих магазинах байеры вынуждены прибегать к разным хитростям,&nbsp;из&nbsp;за которых Простобокс несет дополнительные расходы. Поэтому бесплатного выкупа с промокодом из таких магазинов быть не может.</p>
               <ul class="list-stores__list">
                 <li class="list-stores__item">New Balance</li>
