fix comments, start to work with imgs

--- a/src/pages/paid-reviews.html
+++ b/src/pages/paid-reviews.html
@@ -7,25 +7,27 @@
 <main>
   <section class="reviews-general section">
     <div class="section-xxl">
-      <div class="container reviews-general__top-wrapper">
-        <ul class="breadcrumbs">
-          <li class="breadcrumbs__item">
-            <a href="" #>Главная</a>
-          </li>
-          <li class="breadcrumbs__item breadcrumbs__item--active">Отзывы из ЛК</li>
-        </ul>
-        <div class="reviews-general__inner-wrapper">
-          <h1 class="heading-primary reviews-general__heading">Доллары за отзывы о Простобокс</h1>
-          <p class="paid-reviews-text reviews-general__text">
-            <span class="black">Хотите получить американские доллары на ваш баланс?</span> Просто разместите отзыв о
-            Простобокс в социальных сетях и на сайтах-отзовиках. И самое крутое для вас - отзывы на разных площадках
-            <span class="blue blue--bold">суммируются</span>!
+      <div class="reviews-general__top-wrapper">
+        <div class="container">
+          <ul class="breadcrumbs">
+            <li class="breadcrumbs__item">
+              <a href="" #>Главная</a>
+            </li>
+            <li class="breadcrumbs__item breadcrumbs__item--active">Отзывы из ЛК</li>
+          </ul>
+          <div class="reviews-general__inner-wrapper">
+            <h1 class="heading-primary reviews-general__heading">Доллары за отзывы о Простобокс</h1>
+            <p class="paid-reviews-text reviews-general__text">
+              <span class="black">Хотите получить американские доллары на ваш баланс?</span> Просто разместите отзыв о
+              Простобокс в социальных сетях и на сайтах-отзовиках. И самое крутое для вас - отзывы на разных площадках
+              <span class="blue blue--bold">суммируются</span>!
+            </p>
+            <a class="button reviews-general__button">Оставить отзыв</a>
+          </div>
+          <p class="paid-reviews-text reviews-general__text reviews-general__text--floating">
+            После проверки мы зачислим деньги на ваш баланс у нас. За каждый отзыв вы получите дополнительные доллары.
           </p>
-          <a class="button reviews-general__button">Оставить отзыв</a>
         </div>
-        <p class="paid-reviews-text reviews-general__text reviews-general__text--floating">
-          После проверки мы зачислим деньги на ваш баланс у нас. За каждый отзыв вы получите дополнительные доллары.
-        </p>
       </div>
     </div>
   </section>
@@ -41,20 +43,28 @@
             class="black">простым правилам</span>:
         </p>
       </div>
-      <ul class="row paid-reviews__list">
-        <li class="col-lg-3 col-md-6 paid-reviews__list-item">
-          Разместите в своём <span class="black">Instagram пост</span> с товарами из вашей посылки.
+      <ul class="row paid-reviews-list">
+        <li class="col-lg-3 col-md-6 paid-reviews-list__item">
+          <p class="paid-reviews-list__item-desc paid-reviews-list__item-desc--step1">
+            Разместите в своём <span class="black">Instagram пост</span> с товарами из вашей посылки.
+          </p>
         </li>
-        <li class="col-lg-3 col-md-6 paid-reviews__list-item">
-          <span class="black">Фото</span> должно быть светлым и ярким, сделанным при хорошем освещении, четко и без
-          размытий.
+        <li class="col-lg-3 col-md-6 paid-reviews-list__item">
+          <p class="paid-reviews-list__item-desc paid-reviews-list__item-desc--step2">
+            <span class="black">Фото</span> должно быть светлым и ярким, сделанным при хорошем освещении, четко и без
+            размытий.
+          </p>
         </li>
-        <li class="col-lg-3 col-md-6 paid-reviews__list-item">
-          В тексте поста - отметьте через упоминание аккаунт Простобокс в Instagram <span
-            class="black">@prostoboxme</span>
+        <li class="col-lg-3 col-md-6 paid-reviews-list__item">
+          <p class="paid-reviews-list__item-desc paid-reviews-list__item-desc--step3">
+            В тексте поста - отметьте через упоминание аккаунт Простобокс в Instagram <span
+              class="black">@prostoboxme</span>
+          </p>
         </li>
-        <li class="col-lg-3 col-md-6 paid-reviews__list-item">
-          <span class="black">Оставьте ссылку</span> на пост здесь
+        <li class="col-lg-3 col-md-6 paid-reviews-list__item">
+          <p class="paid-reviews-list__item-desc paid-reviews-list__item-desc--step4">
+            <span class="black">Оставьте ссылку</span> на пост здесь
+          </p>
         </li>
       </ul>
       <div class="submit-review">
@@ -165,24 +175,35 @@
             class="black">простым правилам</span>:
         </p>
       </div>
-      <ul class="row paid-reviews__list">
-        <li class="col-md-4 paid-reviews__list-item paid-reviews__list-item--insta-video">
-          Разместите в своём Instagram <span class="black">видео-пост</span>
-          или <span class="black">reels</span> с распаковкой вашей посылки.
+      <ul class="row paid-reviews-list">
+        <li class="col-md-4 paid-reviews-list__item paid-reviews-list__item--insta-video">
+          <p class="paid-reviews-list__item-desc">
+            Разместите в своём Instagram <span class="black">видео-пост</span>
+            или <span class="black">reels</span> с распаковкой вашей посылки.
+          </p>
         </li>
-        <li class="col-md-4 paid-reviews__list-item paid-reviews__list-item--insta-video">
-          <span class="black">Видео</span> должно быть <span class="black">хорошего качества</span>
-          и сделано при хорошем освещении.
+        <li class="col-md-4 paid-reviews-list__item paid-reviews-list__item--insta-video">
+          <p class="paid-reviews-list__item-desc">
+            <span class="black">Видео</span> должно быть <span class="black">хорошего качества</span>
+            и сделано при хорошем освещении.
+          </p>
         </li>
-        <li class="col-md-4 paid-reviews__list-item paid-reviews__list-item--insta-video">
-          На видео <span class="black">автор должен рассказывать</span> о распаковке посылки, товарах и работе сервиса.
+        <li class="col-md-4 paid-reviews-list__item paid-reviews-list__item--insta-video">
+          <p class="paid-reviews-list__item-desc">
+            На видео <span class="black">автор должен рассказывать</span> о распаковке посылки, товарах и работе
+            сервиса.
+          </p>
         </li>
-        <li class="col-md-4 paid-reviews__list-item paid-reviews__list-item--insta-video">
-          В тексте reels или видео-поста - отметьте через упоминание аккаунт Простобокс в Instagram <span
-            class="black">@prostoboxme</span>
+        <li class="col-md-4 paid-reviews-list__item paid-reviews-list__item--insta-video">
+          <p class="paid-reviews-list__item-desc">
+            В тексте reels или видео-поста - отметьте через упоминание аккаунт Простобокс в Instagram <span
+              class="black">@prostoboxme</span>
+          </p>
         </li>
-        <li class="col-md-4 paid-reviews__list-item paid-reviews__list-item--insta-video">
-          <span class="black">Оставьте ссылку</span> на пост здесь
+        <li class="col-md-4 paid-reviews-list__item paid-reviews-list__item--insta-video">
+          <p class="paid-reviews-list__item-desc">
+            <span class="black">Оставьте ссылку</span> на пост здесь
+          </p>
         </li>
       </ul>
       <div class="submit-review">
@@ -208,25 +229,35 @@
         <p class="paid-reviews__question paid-reviews__question--youtube">
           Как получить вознаграждение?
         </p>
-        <ul class="paid-reviews__list row">
-          <li class="paid-reviews__list-item paid-reviews__list-item--youtube-video col-md-4">
-            Разместите на своем
-            <span class="black">You Tube канале</span> видео с распаковкой вашей посылки.
+        <ul class="paid-reviews-list row">
+          <li class="paid-reviews-list__item paid-reviews-list__item--youtube-video col-md-4">
+            <p class="paid-reviews-list__item-desc">
+              Разместите на своем
+              <span class="black">You Tube канале</span> видео с распаковкой вашей посылки.
+            </p>
           </li>
-          <li class="paid-reviews__list-item paid-reviews__list-item--youtube-video col-md-4">
-            <span class="black">Видео</span> должно быть <span class="black">хорошего качества</span>
-            и сделано при хорошем освещении.
+          <li class="paid-reviews-list__item paid-reviews-list__item--youtube-video col-md-4">
+            <p class="paid-reviews-list__item-desc">
+              <span class="black">Видео</span> должно быть <span class="black">хорошего качества</span>
+              и сделано при хорошем освещении.
+            </p>
           </li>
-          <li class="paid-reviews__list-item paid-reviews__list-item--youtube-video col-md-4">
-            На видео <span class="black">автор должен рассказывать</span> о распаковке посылки, товарах и работе
-            сервиса.
+          <li class="paid-reviews-list__item paid-reviews-list__item--youtube-video col-md-4">
+            <p class="paid-reviews-list__item-desc">
+              На видео <span class="black">автор должен рассказывать</span> о распаковке посылки, товарах и работе
+              сервиса.
+            </p>
           </li>
-          <li class="paid-reviews__list-item paid-reviews__list-item--youtube-video col-md-4">
-            Видео должно быть опубликовано для <span class="black">всеобщего доступа</span>
-            на You Tube.
+          <li class="paid-reviews-list__item paid-reviews-list__item--youtube-video col-md-4">
+            <p class="paid-reviews-list__item-desc">
+              Видео должно быть опубликовано для <span class="black">всеобщего доступа</span>
+              на You Tube.
+            </p>
           </li>
-          <li class="paid-reviews__list-item paid-reviews__list-item--youtube-video col-md-4">
-            <span class="black">Оставьте ссылку</span> на пост здесь
+          <li class="paid-reviews-list__item paid-reviews-list__item--youtube-video col-md-4">
+            <p class="paid-reviews-list__item-desc>
+              <span class="black">Оставьте ссылку</span> на пост здесь
+            </p>
           </li>
         </ul>
       </div>
